feat: database connection via URL, bugfixes and refactors - order.*, docs: replace specific response struct with generic response struct - order.actions.update: Save -> Updates - order.requests: dive into associations - order.requests: remove invalid binding tag - order.requests: use pointer receiver on BindToModel - orders.routes: introduce prefix parameter on routes - database: allow to read and build db configurations from DB_URL. Other DB_* variables will be ignored. - database: enhance and extract DSN string builder to separate function - gitignore: assignment-2 -> h8-assignment-2 - setup: proper env variables checking with the new DB_URL variable.
