# docs/swagger.json
@@ -25,13 +25,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.DataList"
+                            "$ref": "#/definitions/responses.WithDataList-models_Order"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     }
                 }
@@ -63,19 +63,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Data"
+                            "$ref": "#/definitions/rocky.my.id_git_h8-assignment-2_http_responses.WithData-models_Order"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     }
                 }
@@ -104,19 +104,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Data"
+                            "$ref": "#/definitions/rocky.my.id_git_h8-assignment-2_http_responses.WithData-models_Order"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     }
                 }
@@ -155,25 +155,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Data"
+                            "$ref": "#/definitions/rocky.my.id_git_h8-assignment-2_http_responses.WithData-models_Order"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     }
                 }
@@ -200,19 +200,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.RowsAffected"
+                            "$ref": "#/definitions/responses.WithRowsAffected"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/order_responses.Error"
+                            "$ref": "#/definitions/responses.Error"
                         }
                     }
                 }
@@ -334,18 +334,18 @@
                 }
             }
         },
-        "order_responses.Data": {
+        "responses.Error": {
             "type": "object",
             "properties": {
-                "data": {
-                    "$ref": "#/definitions/models.Order"
-                },
                 "message": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
         },
-        "order_responses.DataList": {
+        "responses.WithDataList-models_Order": {
             "type": "object",
             "properties": {
                 "count": {
@@ -362,22 +362,22 @@
                 }
             }
         },
-        "order_responses.Error": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "order_responses.RowsAffected": {
+        "responses.WithRowsAffected": {
             "type": "object",
             "properties": {
                 "count": {
                     "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "rocky.my.id_git_h8-assignment-2_http_responses.WithData-models_Order": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.Order"
                 },
                 "message": {
                     "type": "string"
