# http/responses/rows_affected.go
@@ -1,0 +1,8 @@
+package responses
+
+// WithRowsAffected is a response payload for any operations with affected row count
+// from the database.
+type WithRowsAffected struct {
+	Count   int    `json:"count"`
+	Message string `json:"message"`
+}
